test/files/pos/t12851/C_2.scala
//> using options -Werror
class C extends T2
