test/files/neg/t12851b/C_2.scala
//> using options -Werror
class C extends T1 with T2
